2006-05-30  Brian Cameron  <brian.cameron@sun.com>

	* vicious-extensions/ve-config.c: Now save in
	  UTF-8 format to avoid putting non-ASCII values in
	  the config file, such as with the "Welcome" string.
	  Fixes bug #335713.  Patch provided by Frederic
	  Peters <fpeters@entrouvert.com>

2006-05-30  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm.c: Remove some unused code.
	* gui/gdmsetup.c: Fix so when you click on the include_all
	  button, the Automatic/Timed login values update properly.
	  Fixes bug #343203.

2006-05-24  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm.c, docs/C/gdm.xml: Put back support for -nodaemon
	  argument, lost in the 5-12 patch by Christian Kirbach.  This
	  fixes bug #324831.  Patch provided by Ray Strode
	  <rstrode@redhat.com>.

2006-05-23  Brian Cameron  <brian.cameron@sun.com>

	* NEWS:  Add 2.14.7 info.

2006-05-22  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmlogin.c, gui/greeter/greeter.c, 
	  gui/greeter/greeter_item_ulist.[ch]: Now when a user is 
	  selected and a bad password is entered, GDM remembers the
	  username and just asks for the password again.  You now must
	  hit the Cancel/Start Again button to unselect the user from
	  the userlist.  Fixes bug #342574.
	* gui/greeter/greeter_action_language.[ch]: Fix prototype
	  warning.

2006-05-22  Brian Cameron  <brian.cameron@sun.com>

	* gui/greeter/greeter_events.c:  Fix so that the entry field 
	  always has focus after a button press, which wasn't working
	  if the buttons were GTK+ style.

2006-05-19  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm.c, daemon/gdmconfig.[ch], daemon/slave.c,
	  daemon/verify-pam.c: Fix per-display configuration so it
	  also works for greeter/SystemMenu and greeter/ChooserButton
	  keys.  Add new gdmconfig.c interfaces for getting keys in
	  a per-display fashion so they are easier to use.

2006-05-18  Brian Cameron  <brian.cameron@sun.com>

	* config/Makefile.am: Do not cause make install to fail if chown